# tripy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  release-v0.2.0.md
.github/workflows/: ci.yml  deploy-aws.yml
alembic/: env.py
alembic/versions/: 20260208_0001_initial_tripy_schema.py
api/graph_api/: graph_schemas.py  graph_views.py
config/: development.yml
docs/: API.md  ARCHITECTURE.md  AWS_DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND_CONTRIBUTING.md  OBSERVABILITY.md  ROADMAP.md  UI_DESIGN_TOKENS.md
graph_chat/: graph_gradio.py  llm_tavily.py  第三个流程图.py
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
src/ctrip_assistant/: __init__.py  app.py  main.py
src/tripy/: __init__.py  app.py  main.py
src/tripy/api/: deps.py
src/tripy/api/v1/: router.py
src/tripy/api/v1/endpoints/: admin.py  auth.py  graph.py  health.py
src/tripy/core/: config.py  exceptions.py  i18n.py  logging.py  observability.py  security.py
src/tripy/db/: base.py  init_db.py  migrations.py  session.py
src/tripy/db/models/: __init__.py  rbac.py  user.py
src/tripy/middleware/: request_context.py
src/tripy/repositories/: __init__.py  rbac_repository.py  user_repository.py
src/tripy/schemas/: auth.py  graph.py
src/tripy/services/: auth_service.py  graph_service.py
tests/: test_auth.py  test_graph_e2e.py  test_health.py  test_rbac.py
tools/: __init__.py  location_trans.py  retriever_vector.py
utils/: docs_oauth2.py  password_hash.py
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
web/e2e/: tripy.spec.ts
web/src/: App.tsx  api.ts  i18n.ts  main.tsx  styles.css  types.ts
